--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -1,7 +1,7 @@
 en-US:
   orders_tracker:
     couldnt_find_order: "Could not find order with the provided data."
-    track!: "Track!"
+    track!: "Track your order"
     track_order: "Track Order"
     tracking_order: "Tracking Order #{{order}}"
     stop_tracking: "Stop Tracking This Order"
